feat: i18n for Clerk

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/localizations": "^1.28.2",
     "@clerk/nextjs": "^4.29.9",
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
